--- a/website/style.css
+++ b/website/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Arial;
-    font-size: 23px;
+    font-size: 20px;
 }
 
 body {
@@ -11,12 +11,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 130px;
+    padding-top: 80px;
 }
 
 .container {
     background-color: #fff;
-    padding: 50px;
+    padding: 40px 40px 30px 40px;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     width: 50vw;
@@ -55,7 +55,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .detail, .sunrise, .sunset {
@@ -70,7 +70,7 @@ body {
     gap: 40px;
 }
 
-.day, .hour  {
+.day, .hour  ,#hour{
     background-color: #f9f9f9;
     padding: 10px 30px 10px 30px;
     margin: 10px 0 10px 0;
@@ -79,7 +79,7 @@ body {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.day:hover, .hour:hover {
+.day:hover, .hour:hover, #hour:hover{
     transform: translateY(-5px);
     box-shadow: 0 8px 15px rgb(3, 174, 210, 0.5);
 }
