--- a/website/style.css
+++ b/website/style.css
@@ -14,12 +14,13 @@ body {
     padding-top: 80px;
 }
 
-.container {
+#container {
     background-color: #fff;
     padding: 40px 30px 40px 30px;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     width: 55vw;
+    display: none;
     /* min-width: 320px; */
 }
 
@@ -96,7 +97,7 @@ body {
         padding-bottom: 30px;
     }
 
-    .container {
+    #container {
         padding: 25px;
         width: 85vw;
     }
@@ -157,7 +158,7 @@ body {
         padding-bottom: 20px;
     }
 
-    .container {
+    #container {
         padding: 25px;
         width: 70vw;
     }
@@ -165,3 +166,22 @@ body {
         gap: 30px;
     }
 }
+
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 120px;
+    height: 120px;
+    margin: -60px 0 0 -60px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #03AED2;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
