--- a/website/style.css
+++ b/website/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Arial;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 body {
@@ -11,15 +11,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 80px;
+    padding-top: 120px;
 }
 
 #container {
     background-color: #fff;
-    padding: 40px 30px 40px 30px;
+    padding: 40px 30px 55px 30px;
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-    width: 55vw;
+    width: 65vw;
     display: none;
     /* min-width: 320px; */
 }
@@ -62,7 +62,7 @@ body {
 }
 
 .forecast {
-    margin-top: 10px;
+    margin-top: 20px;
     justify-content: center;
     text-align: center;
     display: flex;
@@ -75,7 +75,7 @@ body {
 
 .day, .hour  ,#hour, #fourth_hour, #seventh_hour, #tenth_hour, #thirteen_hour, #day, #last_day, #second_last_day, #third_last_day, #fourth_last_day {
     background-color: #f9f9f9;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 100px 10px 100px;
     margin: 10px 0 10px 0;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
@@ -164,6 +164,15 @@ body {
     }
     .forecast {
         gap: 30px;
+    }
+
+    .day, .hour  ,#hour, #fourth_hour, #seventh_hour, #tenth_hour, #thirteen_hour, #day, #last_day, #second_last_day, #third_last_day, #fourth_last_day {
+        background-color: #f9f9f9;
+        padding: 10px 50px 10px 50px;
+        margin: 10px 0 10px 0;
+        border-radius: 5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 }
 
